--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ pyflyte-map-execute = "flytekit.bin.entrypoint:map_execute_task_cmd"
 pyflyte = "flytekit.clis.sdk_in_container.pyflyte:main"
 flyte-cli = "flytekit.clis.flyte_cli.main:_flyte_cli"
 
-[tool.poetry.dependencies]
+[project.dependencies]
 flyteidl = { git = "https://github.com/dominodatalab/flyteidl.git", rev = "main" }
 
 [tool.setuptools_scm]
