--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "diskcache>=5.2.1",
     "docker>=4.0.0,<7.0.0",
     "docstring-parser>=0.9.0",
-    "flyteidl @ git+https://github.com/flyteorg/flyte.git@1f0a4f2374d3008e4a39c7305d3791e73dd6618e#subdirectory=flyteidl", # install a python package from a repo subdirectory
+    "flyteidl>=1.12.0b0",
     "fsspec>=2023.3.0",
     "gcsfs>=2023.3.0",
     "googleapis-common-protos>=1.57",
